# dumbtorch

./: .gitignore  CMakeLists.txt  README.md
DumbTorch/: CMakeLists.txt
DumbTorch/include/dumbtorch/: tensor.h
DumbTorch/include/dumbtorch/ops/: basic_ops.h
DumbTorch/src/: DumbTorch.cpp  DumbTorch.cpp cant have main or gtest breaks  DumbTorch.h  tensor.cpp
DumbTorch/src/ops/: basic_ops.cpp
DumbTorch/tests/: CMakeLists.txt  test_basic.cpp
DumbTorch/tests/cpp/: test_tensor.cpp
